Fixed a bug : history component used to cut moves text when they overflowed.

--- a/src/app/components/loloof64-chesshistory/loloof64-chesshistory.component.scss
+++ b/src/app/components/loloof64-chesshistory/loloof64-chesshistory.component.scss
@@ -1,6 +1,8 @@
 .history_main {
     overflow: scroll;
     background-color: beige;
+    word-wrap: break-word;
+    word-break: break-word;
 }
 
 .moveEntry {
